<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/withdraw_yue"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/withdraw_gold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="@color/red5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@mipmap/withdraw_et_bg"
                    android:gravity="center_vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/withdraw_jine"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:background="@color/gray3" />

                    <EditText
                        android:id="@+id/withdraw_money"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/withdraw_jine_tip"
                        android:singleLine="true"
                        android:inputType="numberDecimal"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp">

                <Spinner
                    android:id="@+id/withdraw_bank"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:entries="@array/bank" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/withdraw_et_bg"
                    android:gravity="center_vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/withdraw_account" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:background="@color/gray3" />

                    <EditText
                        android:id="@+id/withdraw_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:singleLine="true"
                        android:inputType="textPersonName"
                        android:hint="@string/withdraw_account"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/withdraw_et_bg"
                    android:gravity="center_vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/withdraw_number" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:background="@color/gray3" />

                    <EditText
                        android:id="@+id/withdraw_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:singleLine="true"
                        android:inputType="text"
                        android:hint="@string/withdraw_number"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/withdraw_et_bg"
                    android:gravity="center_vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <EditText
                        android:id="@+id/withdraw_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:singleLine="true"
                        android:inputType="number"
                        android:hint="@string/withdraw_code"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/withdraw_getcode"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/register_code_bg"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/register_getCode"
                        android:textSize="@dimen/login_text" />
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/user_bt_bg"
                android:text="@string/withdraw"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/withdraw_history" />

            <com.smapley.base.widget.ListViewForScrollView
                android:id="@+id/withdraw_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>