<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            android:background="@mipmap/main_bg"
            android:orientation="vertical">

            <include layout="@layout/actionbar" />


            <ImageView
                android:id="@+id/main_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/main_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/main_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/main_record" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/main_record"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/main_gold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="0.00"
                        android:textColor="@color/white"
                        android:textSize="27sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/main_detail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/main_detail"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/main_viewPage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v4.view.ViewPager>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/main_recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="20dp"
                android:paddingStart="50dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/main_recharge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_recharge"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/main_withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="50dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/main_withdraw" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_withdraw"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray3" />

        <ImageView
            android:id="@+id/main_shake"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/main_shake" />

    </RelativeLayout>

</RelativeLayout>
