<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/set_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/set_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@mipmap/main_image" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:background="@mipmap/icon_null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@mipmap/pay_item_bg"
            android:gravity="center_vertical"

            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_cp"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/ll_license_input_boxes_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/gray3"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/set_cp1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.02"
                    android:layout_height="match_parent"
                    android:background="@color/gray4" />

                <EditText
                    android:id="@+id/set_cp2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.02"
                    android:layout_height="match_parent"
                    android:background="@color/gray4" />

                <EditText
                    android:id="@+id/set_cp3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.02"
                    android:layout_height="match_parent"
                    android:background="@color/gray4" />

                <EditText
                    android:id="@+id/set_cp4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.02"
                    android:layout_height="match_parent"
                    android:background="@color/gray4" />

                <EditText
                    android:id="@+id/set_cp5"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.02"
                    android:layout_height="match_parent"
                    android:background="@color/gray4" />

                <EditText
                    android:id="@+id/set_cp6"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.02"
                    android:layout_height="match_parent"
                    android:background="@color/gray4" />

                <EditText
                    android:id="@+id/set_cp7"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@mipmap/icon_null"
                    android:gravity="center_horizontal|center_vertical" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set__alipay"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/register_code_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/set_bind"
                android:textColor="@color/cyan4" />

        </LinearLayout>

        <Button
            android:id="@+id/set_conform"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@mipmap/login_bt_bg"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/set_keyboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#F0EFF4"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:keyBackground="@android:color/white"
            android:keyTextColor="#5E5E5E"
            android:keyTextSize="18sp"
            android:labelTextSize="18sp"
            android:paddingTop="5dp"
            android:shadowColor="#ffffff"
            android:shadowRadius="0.0"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>